--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2016 RayoLab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
+		  <p>&copy 2018 RayoLab. Este sitio fue hecho con <a href="https://jekyllrb.com">Jekyll</a>, y eres libro de <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copiarlo y modificarlo</a> para tu propio grupo de investigación.</p>
+              <p><a href="http://www.uchile.cl/">Universidad de Chile</a>.</p>
             
 
 		   <p>  </p><p>
@@ -19,12 +19,12 @@
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>
 		</div>
 		<div class="col-sm-4">
-		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  <b>Contacto:</b></b><br />
+		  contacto@rayolab.cl<br />
+			Las Palmeras 3425, Ñuñoa<br />
+			GCM3+9R Santiago <br />
+		  Santiago, Chile <br />
+            (<a href="https://www.google.cl/maps/place/Las+Palmeras+3425,+%C3%91u%C3%B1oa,+Regi%C3%B3n+Metropolitana/@-33.4665582,-70.5976662,17z/data=!3m1!4b1!4m5!3m4!1s0x9662cfc2f9e052e7:0xcc82c1379522a9!8m2!3d-33.4665627!4d-70.5954775?hl=en">Mapa</a>)
 		</div>
 	  </div>
 	</div>
