--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,16 +8,15 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">RayoLab @ Leiden University</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">RayoLab @ Universidad de Chile</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/">Inicio</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/equipo">Equipo</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publicaciones</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Investigación</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/historia">Historia</a></li>
 	  </ul>
 	</div>
   </div>
