--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2018 RayoLab. Este sitio fue hecho con <a href="https://jekyllrb.com">Jekyll</a>, y eres libro de <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copiarlo y modificarlo</a> para tu propio grupo de investigación.</p>
+		  <p>&copy 2019 RayoLab. Este sitio fue hecho con <a href="https://jekyllrb.com">Jekyll</a>, y eres libro de <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copiarlo y modificarlo</a> para tu propio grupo de investigación.</p>
               <p><a href="http://www.uchile.cl/">Universidad de Chile</a>.</p>
             
 
@@ -13,10 +13,9 @@
             
 		</div>
 		<div class="col-sm-4">
-		  Funding:<br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
-          - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>
+		  Créditos:<br />
+		  - <a href="https://agucova.me">Agustín Covarrubias</a> - Administración y edición.<br/>
+		- Rodrigo Dover - Edición y Contenido
 		</div>
 		<div class="col-sm-4">
 		  <b>Contacto:</b></b><br />
