--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
             
 		</div>
 		<div class="col-sm-4">
-		  Créditos:<br />
+			<b>Créditos:</b><br />
 		  - <a href="https://agucova.me">Agustín Covarrubias</a> - Administración y edición.<br/>
 		- Rodrigo Dover - Edición y Contenido
 		</div>
