--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,9 @@
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Inicio</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/equipo">Equipo</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publicaciones</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Investigación</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/papers">Papers</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/libros">Libros</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/historia">Historia</a></li>
 	  </ul>
 	</div>
