--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,14 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2019 RayoLab. Este sitio fue hecho con <a href="https://jekyllrb.com">Jekyll</a>, y eres libro de <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copiarlo y modificarlo</a> para tu propio grupo de investigación.</p>
-              <p><a href="http://www.uchile.cl/">Universidad de Chile</a>.</p>
-            
-
-		   <p>  </p><p>
-            		  
+		  <p>&copy 2019 RayoLab. Este sitio fue hecho con <a href="https://jekyllrb.com">Jekyll</a>, y eres libre de <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copiarlo y modificarlo</a> para tu propio grupo de investigación.</p>
+              <p><a href="http://www.uchile.cl/">Universidad de Chile</a>.</p>            		  
             
 		</div>
 		<div class="col-sm-4">
 			<b>Créditos:</b><br />
 		  - <a href="https://agucova.me">Agustín Covarrubias</a> - Administración y edición.<br/>
-		- Rodrigo Dover - Edición y Contenido
+		- Rodrigo Dover - Edición y Contenido.
 		</div>
 		<div class="col-sm-4">
 		  <b>Contacto:</b></b><br />
