--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 		<div class="col-sm-4">
 			<b>Créditos:</b><br />
 		  - <a href="https://agucova.me">Agustín Covarrubias</a> - Administración y edición.<br/>
-		- Rodrigo Dover - Edición y Contenido.
+		- Rodrigo Dover - Edición y contenido.
 		</div>
 		<div class="col-sm-4">
 		  <b>Contacto:</b></b><br />
