--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Inicio</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/allnews">Noticias</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/equipo">Equipo</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Investigación</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/papers">Papers</a></li>
